// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderization when charts available should render the list of charts 1`] = `
<section
  className="Catalog"
>
  <PageHeader>
    <h1>
      Catalog
    </h1>
    <SearchFilter
      className="margin-l-big"
      onChange={[Function]}
      onSubmit={[MockFunction]}
      placeholder="search charts..."
      value=""
    />
  </PageHeader>
  <LoadingWrapper
    loaded={true}
    type={0}
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <CardGrid>
          <CatalogItem
            item={
              Object {
                "cluster": "default",
                "description": "",
                "icon": undefined,
                "id": "bar",
                "name": "bar",
                "namespace": "kubeapps",
                "repo": Object {
                  "name": "bar",
                  "namespace": "chart-namespace",
                },
                "version": "v2.0.0",
              }
            }
            key="chart/bar/bar"
            type="chart"
          />
          <CatalogItem
            item={
              Object {
                "cluster": "default",
                "description": "",
                "icon": undefined,
                "id": "foo",
                "name": "foo",
                "namespace": "kubeapps",
                "repo": Object {
                  "name": "foo",
                  "namespace": "chart-namespace",
                },
                "version": "v1.0.0",
              }
            }
            key="chart/foo/foo"
            type="chart"
          />
        </CardGrid>
      </div>
    </div>
  </LoadingWrapper>
</section>
`;

exports[`renderization when fetching apps loading spinner matches the snapshot 1`] = `
<section
  className="Catalog"
>
  <PageHeader>
    <h1>
      Catalog
    </h1>
    <SearchFilter
      className="margin-l-big"
      onChange={[Function]}
      onSubmit={[MockFunction]}
      placeholder="search charts..."
      value=""
    />
  </PageHeader>
  <LoadingWrapper
    loaded={false}
    type={0}
  >
    <div
      className="row"
    >
      <div
        className="col-12"
      >
        <CardGrid />
      </div>
    </div>
  </LoadingWrapper>
</section>
`;

exports[`renderization when no charts should render an error 1`] = `
<MessageAlertPage
  level="warning"
>
  <div>
    <h5>
      Charts not found.
    </h5>
    Manage your Helm chart repositories in Kubeapps by visiting the
     
    <Link
      to="/c/default/ns/kubeapps/config/repos"
    >
      App repositories configuration
    </Link>
     
    page.
  </div>
</MessageAlertPage>
`;

exports[`renderization when there is an error fetching charts should render a generic error 1`] = `
<MessageAlertPage
  level="error"
>
  <div>
    <h5>
      Unable to fetch catalog
    </h5>
    There was an error fetching the catalog.
  </div>
</MessageAlertPage>
`;

exports[`renderization when there is an error fetching charts should render a specific error for a forbidden error 1`] = `
<MessageAlertPage
  level="error"
>
  <div>
    <h5>
      Unable to fetch catalog
    </h5>
    There was an error fetching the catalog.
     Please choose a namespace above to which you have access.
  </div>
</MessageAlertPage>
`;
